--- a/CEOL1.html
+++ b/CEOL1.html
@@ -1,4 +1,4 @@
-					</div><div ></div><div ><table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-module="Menu Thumb 9" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/menu-9.jpg" data-bgcolor="Theme BG Color">
+					</div><div ></div><div ><table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-module="Menu Thumb 9" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/menu-9.jpg" >
     <tbody>
 		<tr>
 			<td width="100%" height="16">
@@ -14,7 +14,7 @@
 									<tbody>
 										<tr>
 											<td class="img-center" height="56" valign="middle" align="left" style="line-height:1px;">
-												<a href="http://www.yourwebsiteurl.com" target="_blank" style=""><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/logo_black-blue.png" border="0" width="155" height="33" alt="Logo" title="Logo" style="display:block;" class=""></a>
+												<a href="http://www.ceol.med.br" target="_blank" style=""><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/logo_black-blue.png" border="0" width="155" height="33" alt="Logo" title="Logo" style="display:block;" class=""></a>
 											</td>
 										</tr>
 									</tbody>
@@ -61,11 +61,11 @@
 			</td>
 		</tr>
 	</tbody>
-</table></div><div ></div><table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse:collapse;" data-module="Banner 2" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Banner-bg-img2.jpg">
+</table></div><div ></div><table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse:collapse;" data-module="Banner 2">
 	<tbody>
     	<tr>
            <td align="center">
-              <table  align="center" background="http://www.graycellsweb.in/e-newsletter/all-in-one/images/banner-bg-2.jpg" bgcolor="#333333" border="0" cellpadding="0" cellspacing="0" width="900" style="background-image:url(http://www.graycellsweb.in/e-newsletter/all-in-one/images/banner-bg-2.jpg); background-position: center center; background-size:cover; background-repeat: no-repeat; border-collapse:collapse; padding:0px;" data-bg="Banner BG Image" data-bgcolor="Banner Section BG Color">
+              <table  align="center" background="images/img-004.png" bgcolor="#333333" border="0" cellpadding="0" cellspacing="0" width="900" style="background-image:url(images/img-004.png); background-position: center center; background-size:cover; background-repeat: no-repeat; border-collapse:collapse; padding:0px;" data-bg="Banner BG Image" data-bgcolor="Banner Section BG Color">
               	<tbody>
                      <tr>
                          <td align="center" contenteditable="false" >
@@ -88,9 +88,6 @@
 											 <td width="100%" height="10" style="line-height:1px;"></td>
 										</tr>
 										<tr>
-											 <td width="100%" height="36" align="right" valign="middle" data-color="Content" data-size="Content" data-min="42" data-max="50" style="padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 42px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; line-height: 42px;" contenteditable="false" >referência em atendimento</td>
-										</tr>
-										<tr>
 											 <td width="100%" height="23" style="line-height:1px;"></td>
 										</tr>
 										<tr>
@@ -98,7 +95,7 @@
 												<table cellpadding="0" cellspacing="0" border="0" align="right">
 													<tbody>
 														<tr>
-															<td width="141" height="40" align="center" valign="middle" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="18" style="width: 141px; padding: 0px; margin: 0px; color: rgb(212, 11, 34); font-size: 14px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 39px;"><a href="#" style="text-decoration:none; color:#00c5e9;">Entre em contato</a></td>
+															<td width="141" height="40" align="center" valign="middle" data-min="10" data-max="18" style="width: 141px; padding: 0px; margin: 0px; color: #fff; font-size: 16px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 39px;"><a href="#" style="text-decoration:none; color:#fff;">agendar</a></td>
 														</tr>
 													</tbody>
 												</table>
@@ -117,7 +114,7 @@
 		</td>
 	</tr>
    </tbody>
-</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Title 1" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Solutions-Title1.jpg" data-bgcolor="Theme BG Color">
+</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Title 1" style="border-collapse: collapse; background-color: #f0b238" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Solutions-Title1.jpg" >
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
@@ -128,13 +125,13 @@
 								<td width="100%" height="20" style="line-height:1px;"></td>
 							</tr>
 							<tr>
-								<td class="width-resp-246" width="100%" height="16" align="center" data-size="Sub Business Title" data-color="Sub Business Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#555555; font-size:14px; font-weight:normal; font-family: 'Open Sans', sans-serif; font-weight:400; text-transform:uppercase; line-height:16px;">Welcome to Graycells</td>
+								<td class="width-resp-246" width="100%" height="16" align="center" data-size="Sub Business Title" data-color="Sub Business Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#fff; font-size:14px; font-weight:normal; font-family: 'Open Sans', sans-serif; font-weight:400; text-transform:uppercase; line-height:16px;">Título</td>
 							</tr>
 							<tr>
 								<td width="100%" height="6" style="line-height:1px;"></td>
 							</tr>
 							<tr>
-								<td class="width-resp-246" width="100%" height="42" align="center" data-size="Business Title" data-color="Business Title" data-min="45" data-max="52" style=" height:38px; margin:0px; padding:0px; color:#d40b22; font-size:48px; font-weight:700; font-family: 'Open Sans', sans-serif; text-transform:capitalize; line-height:38px;">Business Solutions</td>
+								<td class="width-resp-246" width="100%" height="42" align="center" data-size="Business Title" data-color="Business Title" data-min="45" data-max="52" style=" height:38px; margin:0px; padding:0px; color:#fff; font-size:48px; font-weight:700; font-family: 'Open Sans', sans-serif; text-transform:capitalize; line-height:38px;">CEOL OTORRINO</td>
 							</tr>
 							<tr>
 								<td width="100%" height="20" style="line-height:1px;"></td>
@@ -145,7 +142,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Description2.jpg" data-bgcolor="Theme BG Color">
+</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" >
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
@@ -160,7 +157,7 @@
  									<table class="width_90percent" cellpadding="0" cellspacing="0" border="0" width="600" height="200">
 										<tbody>
 											<tr>
-												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Business-Description_img2.jpg" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
+												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="images/img-001.png" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
 												<td class="display-block" width="50" align="left"></td>
 												<td class="display-block" width="300" height="142" align="left" valign="top">
 													<table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -176,7 +173,7 @@
 																	<table cellpadding="0" cellspacing="0" border="0" height="35" align="left">
 																		<tbody>
 																			<tr>
-																				<td class="text-center editable" width="135" height="30" align="center" valign="bottom" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;" contenteditable="false"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">View Work</a></td>
+																				<td class="text-center editable" width="135" height="30" align="center" valign="bottom"  data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;" contenteditable="false"><a href="http://www.ceol.med.br" data-color="View work button" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																			</tr>
 																		</tbody>
 																	</table>
@@ -200,7 +197,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Description2.jpg" data-bgcolor="Theme BG Color">
+</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" >
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
@@ -215,7 +212,7 @@
  									<table class="width_90percent" cellpadding="0" cellspacing="0" border="0" width="600" height="200">
 										<tbody>
 											<tr>
-												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Business-Description_img2.jpg" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
+												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="images/img-002.png" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
 												<td class="display-block" width="50" align="left"></td>
 												<td class="display-block" width="300" height="142" align="left" valign="top">
 													<table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -231,7 +228,7 @@
 																	<table cellpadding="0" cellspacing="0" border="0" height="35" align="left">
 																		<tbody>
 																			<tr>
-																				<td class="text-center" width="135" height="30" align="center" valign="bottom" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">View Work</a></td>
+																				<td class="text-center" width="135" height="30" align="center" valign="bottom"  data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;"><a href="http://www.ceol.med.br" data-color="View work button" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																			</tr>
 																		</tbody>
 																	</table>
@@ -255,7 +252,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Description2.jpg" data-bgcolor="Theme BG Color">
+</table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" >
 	<tbody>
 		<tr>
 			<td valign="middle" align="center" contenteditable="false" >
@@ -270,7 +267,7 @@
  									<table class="width_90percent" cellpadding="0" cellspacing="0" border="0" width="600" height="200">
 										<tbody>
 											<tr>
-												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Business-Description_img2.jpg" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
+												<td class="display-block height-and-padding-bottom text-center" rowspan="2" width="250" align="left"><img editable="true" src="images/img-003.png" border="0" width="250" height="200" alt="Description Thumb" title="Description Thumb" style="display:block;"></td>
 												<td class="display-block" width="50" align="left"></td>
 												<td class="display-block" width="300" height="142" align="left" valign="top">
 													<table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -286,7 +283,7 @@
 																	<table cellpadding="0" cellspacing="0" border="0" height="35" align="left">
 																		<tbody>
 																			<tr>
-																				<td class="text-center" width="135" height="30" align="center" valign="bottom" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">View Work</a></td>
+																				<td class="text-center" width="135" height="30" align="center" valign="bottom"  data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;"><a href="http://www.ceol.med.br" data-color="View work button" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																			</tr>
 																		</tbody>
 																	</table>
@@ -310,7 +307,7 @@
 			</td>
 		</tr>
 	</tbody>
-</table><table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse: collapse;" data-module="Contact us 7" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Contact-us-7.jpg" bgcolor="#a35c44" data-bgcolor="Theme BG Color">
+</table><table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse: collapse;" data-module="Contact us 7" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Contact-us-7.jpg" bgcolor="#a35c44" >
     <tbody>
         <tr>
             <td width="100%" height="50" style="line-height:1px;"></td>
@@ -349,9 +346,9 @@
                         </tr>
                         <tr>
                             <td colspan="2" width="100%" height="49" align="center" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;" contenteditable="false">
-                                <span href="http://www.yourwebsiteurl.com" data-color="Address" style="color:#FFFFFF;" contenteditable="false" >SEPS 715/915, Ed Pacini, Bloco D, térreo - Asa Sul, Brasília - DF, 70390-155. &nbsp;</span>
-<a href="http://www.yourwebsiteurl.com" data-color="Contact 1" style="text-decoration: none; color: rgb(255, 255, 255); font-weight: 700;" contenteditable="false" >(61) 3346-4312&nbsp;&nbsp;</a>
-                                <a href="http://www.yourwebsiteurl.com" data-color="Contact 2" style="text-decoration: none; color: rgb(255, 255, 255); outline-width: 0px !important; user-select: auto !important;" contenteditable="false" >contact@ceol.med.br</a>
+                                <span href="http://www.ceol.med.br" data-color="Address" style="color:#FFFFFF;" contenteditable="false" >SEPS 715/915, Ed Pacini, Bloco D, térreo - Asa Sul, Brasília - DF, 70390-155. &nbsp;</span><br />
+<a href="http://www.ceol.med.br" data-color="Contact 1" style="text-decoration: none; color: rgb(255, 255, 255); font-weight: 700;" contenteditable="false" >(61) 3346-4312&nbsp;&nbsp;</a>
+                                <a href="http://www.ceol.med.br" data-color="Contact 2" style="text-decoration: none; color: rgb(255, 255, 255); outline-width: 0px !important; user-select: auto !important;" contenteditable="false" >contact@ceol.med.br</a>
                             </td>
                         </tr>
                         <tr>
