--- a/CEOL1.html
+++ b/CEOL1.html
@@ -1,4 +1,4 @@
-					</div><div ></div><div ><table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" data-module="Menu Thumb 9" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/menu-9.jpg" >
+<table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse: collapse; background-color: rgb(255, 255, 255);">
     <tbody>
 		<tr>
 			<td width="100%" height="16">
@@ -14,7 +14,7 @@
 									<tbody>
 										<tr>
 											<td class="img-center" height="56" valign="middle" align="left" style="line-height:1px;">
-												<a href="http://www.ceol.med.br" target="_blank" style=""><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/logo_black-blue.png" border="0" width="155" height="33" alt="Logo" title="Logo" style="display:block;" class=""></a>
+												<a href="http://www.ceol.med.br" target="_blank" style=""><img editable="true" src="images/ceol-logo.png" border="0" width="155" height="89" alt="Logo" title="Logo" style="display:block;" class=""></a>
 											</td>
 										</tr>
 									</tbody>
@@ -24,7 +24,7 @@
 								<table cellpadding="0" cellspacing="0" border="0" align="center" height="56">
 									<tbody>
 										<tr>
-											<td align="center" valign="middle" data-size="Browser View 1" data-min="10" data-max="18" style="margin:0px; padding:0px; text-transform:uppercase; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:400;" contenteditable="false"><br></td>
+											<td align="center" valign="middle" data-size="Browser View 1" data-min="10" data-max="18" style="margin:0px; padding:0px; text-transform:uppercase; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:400;" ><br></td>
 										</tr>
 									</tbody>
 								</table>
@@ -68,21 +68,21 @@
               <table  align="center" background="images/img-004.png" bgcolor="#333333" border="0" cellpadding="0" cellspacing="0" width="900" style="background-image:url(images/img-004.png); background-position: center center; background-size:cover; background-repeat: no-repeat; border-collapse:collapse; padding:0px;" data-bg="Banner BG Image" data-bgcolor="Banner Section BG Color">
               	<tbody>
                      <tr>
-                         <td align="center" contenteditable="false" >
-                           	<div style="margin:0 auto">
-                               <table class="width_90percent padding-bottom" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse;">
+                         <td align="center"  >
+                           	<div>
+                               <table border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse;">
                                   <tbody>
                      					<tr>
-					 						<td class="padding-top-60" width="100%" height="176" align="right"></td>
+					 						<td width="100%" height="276" align="right"></td>
 										</tr>
 										<tr>
-											<td width="100%" height="17" align="right" valign="middle" data-color="Sub Title" data-size="Sub Title" data-min="18" data-max="24" style=" padding:0px; margin:0px; color:#ffffff; font-size:21px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; line-height:17px;" contenteditable="false" ><span style="padding:0px; margin:0px; color:#ffffff; font-size:21px; font-family: 'Raleway', sans-serif; font-weight:700; text-transform:uppercase; line-height:29px;" contenteditable="false" >CEOL Otorrino</span></td>
+											<td width="100%" height="17" align="right" valign="middle" data-color="Sub Title" data-size="Sub Title" data-min="18" data-max="24" style=" padding:0px; margin:0px; color:#ffffff; font-size:21px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; line-height:17px;"  ><span style="padding:0px; margin:0px; color:#ffffff; font-size:21px; font-family: 'Raleway', sans-serif; font-weight:700; text-transform:uppercase; line-height:29px;">CEOL Otorrino</span></td>
 										</tr>
 										<tr>
 											 <td width="100%" height="7" style="line-height:1px;"></td>
 										</tr>
 										<tr>
-											 <td width="100%" height="41" align="right" valign="middle" data-color="Title" data-size="Title" data-min="50" data-max="58" style="padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 50px; font-family: Raleway, sans-serif; font-weight: 700; text-transform: uppercase; line-height: 50px;" contenteditable="false" >10 anos</td>
+											 <td width="100%" height="41" align="right" valign="middle" data-color="Title" data-size="Title" data-min="50" data-max="58" style="padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 50px; font-family: Raleway, sans-serif; font-weight: 700; text-transform: uppercase; line-height: 50px;">10 anos</td>
 										</tr>
 										<tr>
 											 <td width="100%" height="10" style="line-height:1px;"></td>
@@ -102,7 +102,7 @@
 											</td>
 										</tr>
 										<tr>
-											 <td width="100%" height="200" style="line-height:1px;"></td>
+											 <td width="100%" height="100" style="line-height:1px;"></td>
 										</tr>
 									</tbody>
 								</table>
@@ -118,14 +118,14 @@
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
-				<div style="margin:0 auto">
+				<div >
 					<table class="width_90percent" align="center" border="0" cellpadding="0" cellspacing="0" width="600" height="100" style="border-collapse:collapse;">
 						<tbody>
 							<tr>
 								<td width="100%" height="20" style="line-height:1px;"></td>
 							</tr>
 							<tr>
-								<td class="width-resp-246" width="100%" height="16" align="center" data-size="Sub Business Title" data-color="Sub Business Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#fff; font-size:14px; font-weight:normal; font-family: 'Open Sans', sans-serif; font-weight:400; text-transform:uppercase; line-height:16px;">Título</td>
+								<td class="width-resp-246" width="100%" height="16" align="center" data-size="Sub Business Title" data-color="Sub Business Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#fff; font-size:14px; font-weight:normal; font-family: 'Open Sans', sans-serif; font-weight:400; text-transform:uppercase; line-height:16px;">Informativo</td>
 							</tr>
 							<tr>
 								<td width="100%" height="6" style="line-height:1px;"></td>
@@ -146,7 +146,7 @@
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
-				<div style="margin:0 auto">
+				<div >
 					<table class="width_90percent" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse;">
 						<tbody>
 							<tr>
@@ -169,11 +169,11 @@
 																<td width="100%" height="18" style="line-height:1px;"></td>
 															</tr>
 															<tr>
-																<td class="text-center editable" align="left" width="100%" height="35" valign="bottom" contenteditable="false">
+																<td class="text-center editable" align="left" width="100%" height="35" valign="bottom" >
 																	<table cellpadding="0" cellspacing="0" border="0" height="35" align="left">
 																		<tbody>
 																			<tr>
-																				<td class="text-center editable" width="135" height="30" align="center" valign="bottom"  data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;" contenteditable="false"><a href="http://www.ceol.med.br" data-color="View work button" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
+																				<td class="text-center editable" width="135" height="30" align="center" valign="bottom"  data-size="View work button" data-min="10" data-max="16" style="width: 135px; padding: 0px; margin: 0px; color: rgb(255, 255, 255); font-size: 13px; font-family: Raleway, sans-serif; font-weight: 400; text-transform: uppercase; background-color: rgb(247, 114, 67); border-radius: 50px; line-height: 34px;" ><a href="http://www.ceol.med.br" data-color="View work button" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																			</tr>
 																		</tbody>
 																	</table>
@@ -201,7 +201,7 @@
 	<tbody>
 		<tr>
 			<td valign="middle" align="center">
-				<div style="margin:0 auto">
+				<div >
 					<table class="width_90percent" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse;">
 						<tbody>
 							<tr>
@@ -255,8 +255,8 @@
 </table><table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Description 2" style="border-collapse: collapse; background-color: rgb(255, 255, 255);" >
 	<tbody>
 		<tr>
-			<td valign="middle" align="center" contenteditable="false" >
-				<div style="margin:0 auto">
+			<td valign="middle" align="center"  >
+				<div >
 					<table class="width_90percent" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse:collapse;">
 						<tbody>
 							<tr>
@@ -313,7 +313,7 @@
             <td width="100%" height="50" style="line-height:1px;"></td>
         </tr>
         <tr>
-            <td width="100%" align="center" valign="middle" contenteditable="false" >
+            <td width="100%" align="center" valign="middle"  >
                 <table class="width_90percent" align="center" border="0" cellpadding="0" width="600" cellspacing="0" style="border-collapse:collapse;">
                     <tbody>
                         <tr>
@@ -330,9 +330,6 @@
                                             <td width="36" height="30" align="center" valign="top" style="line-height:1px;">
                                                 <a href="https://plus.google.com/" target="_blank"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Contact-us-6-google-plus.png" alt="Google Plus" title="Google Plus" width="28" height="28" border="0" style="display: block;"></a>
                                             </td>
-                                            <td width="36" height="30" align="center" valign="top" style="line-height:1px;">
-                                                <a href="https://www.pinterest.com/" target="_blank"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Contact-us-6-pinterest.png" alt="Pinterest" title="Pinterest" width="28" height="28" border="0" style="display: block;"></a>
-                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -345,10 +342,10 @@
                             <td colspan="2" width="100%" height="1" bgcolor="#FFFFFF" data-bgcolor="Border Color" style="line-height: 1px; background-color: rgb(255, 255, 255);"></td>
                         </tr>
                         <tr>
-                            <td colspan="2" width="100%" height="49" align="center" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;" contenteditable="false">
-                                <span href="http://www.ceol.med.br" data-color="Address" style="color:#FFFFFF;" contenteditable="false" >SEPS 715/915, Ed Pacini, Bloco D, térreo - Asa Sul, Brasília - DF, 70390-155. &nbsp;</span><br />
-<a href="http://www.ceol.med.br" data-color="Contact 1" style="text-decoration: none; color: rgb(255, 255, 255); font-weight: 700;" contenteditable="false" >(61) 3346-4312&nbsp;&nbsp;</a>
-                                <a href="http://www.ceol.med.br" data-color="Contact 2" style="text-decoration: none; color: rgb(255, 255, 255); outline-width: 0px !important; user-select: auto !important;" contenteditable="false" >contact@ceol.med.br</a>
+                            <td colspan="2" width="100%" height="49" align="center" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;" >
+                                <span href="http://www.ceol.med.br" data-color="Address" style="color:#FFFFFF;"  >SEPS 715/915, Ed Pacini, Bloco D, térreo - Asa Sul, Brasília - DF, 70390-155. &nbsp;</span><br />
+<a href="http://www.ceol.med.br" data-color="Contact 1" style="text-decoration: none; color: rgb(255, 255, 255); font-weight: 700;"  >(61) 3346-4312&nbsp;&nbsp;</a>
+                                <a href="http://www.ceol.med.br" data-color="Contact 2" style="text-decoration: none; color: rgb(255, 255, 255); outline-width: 0px !important; user-select: auto !important;"  >contact@ceol.med.br</a>
                             </td>
                         </tr>
                         <tr>
@@ -358,7 +355,7 @@
                             <td colspan="2" width="100%" height="25" style="line-height:1px;"></td>
                         </tr>
                         <tr>
-                            <td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;" contenteditable="false">© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
+                            <td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;" >© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
                             <td  width="200" height="25" align="right" valign="middle" data-size="Unsubscribe" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#333333; font-family: 'Open Sans', sans-serif; font-weight:700; line-height:24px;"><a href="sr_unsubscribe" data-color="Unsubscribe" style="text-decoration:none; color:#FFFFFF;">Unsubscribe</a></td>
                         </tr>
                     </tbody>
@@ -369,4 +366,4 @@
             <td width="100%" height="50" style="line-height:1px;"></td>
         </tr>
     </tbody>
-</table><div ></div>
+</table>
