--- a/CEOL2.html
+++ b/CEOL2.html
@@ -89,36 +89,7 @@
 		</tr>
 	</tbody>
 </table>
-<table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="Business Title 1" style="border-collapse: collapse; background-color: #f0b238" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Business-Solutions-Title1.jpg" >
-	<tbody>
-		<tr>
-			<td valign="middle" align="center">
-				<div >
-					<table  align="center" border="0" cellpadding="0" cellspacing="0" width="600" height="100" style="border-collapse:collapse;">
-						<tbody>
-							<tr>
-								<td width="100%" height="20" style="line-height:1px;"></td>
-							</tr>
-							<tr>
-								<td width="100%" height="16" align="center" data-size="Sub Business Title" data-color="Sub Business Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#fff; font-size:14px; font-weight:normal; font-family: 'Open Sans', sans-serif; font-weight:400; text-transform:uppercase; line-height:16px;">Informativo</td>
-							</tr>
-							<tr>
-								<td width="100%" height="6" style="line-height:1px;"></td>
-							</tr>
-							<tr>
-								<td width="100%" height="42" align="center" data-size="Business Title" data-color="Business Title" data-min="45" data-max="52" style=" height:38px; margin:0px; padding:0px; color:#fff; font-size:48px; font-weight:700; font-family: 'Open Sans', sans-serif; text-transform:capitalize; line-height:38px;">CEOL OTORRINO</td>
-							</tr>
-							<tr>
-								<td width="100%" height="20" style="line-height:1px;"></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</td>
-		</tr>
-	</tbody>
-</table>
-<table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" data-module="novidades7" style="border-collapse:collapse;" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Latest-work-7.jpg" data-bgcolor="Theme BG Color">
+<table class="width_100 currentTable" align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse:collapse;" data-thumb="http://www.graycellsweb.in/e-newsletter/all-in-one/thumbnails/Latest-work-7.jpg" data-bgcolor="Theme BG Color">
 	<tbody>
 		<tr>
 			<td width="100%" align="center" contenteditable="true" class="editable">
@@ -132,7 +103,7 @@
 								<table class="width_100percent" cellpadding="0" cellspacing="0" border="0" align="center" width="600">
 									<tbody>
 										<tr>
-											<td class="text-center" width="100%" height="36" valign="top" align="left" data-size="Title" data-color="Title" data-min="32" data-max="40" style="margin:0px; padding:0px; color:#d40b22; font-size:36px; font-weight:700; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:25px;">novidades</td>
+											<td class="text-center" width="100%" height="36" valign="top" align="left" data-size="Title" data-color="Title" data-min="32" data-max="40" style="margin:0px; padding:0px; color:#f0b238; font-size:36px; font-weight:700; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:25px;">novidades</td>
 										</tr>
 										<tr>
 											<td class="text-center height-and-padding-bottom" width="100%" height="30" valign="top" align="left" data-size="Title Description " data-color="Title Description" data-min="10" data-max="18" style="margin:0px; padding:0px; color:#757575; font-size:14px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:14px;">Lorem ipsum quis massa id velit sagittis fermentum massa. Pellen tesque...</td>
@@ -142,7 +113,7 @@
                              					<table class="text-center" align="left" border="0" cellpadding="0" cellspacing="0" width="50" height="1" style="border-collapse:collapse;">
                                  					<tbody>
                                      					<tr>
-															<td class="text-center" width="50" align="left" height="1" style="line-height:1px;" data-bgcolor="Border Line" bgcolor="#d40b22"></td>
+															<td class="text-center" width="50" align="left" height="1" style="line-height:1px;" data-bgcolor="Border Line" bgcolor="#f77243"></td>
 
                                      					</tr>
                                 					</tbody>
@@ -180,7 +151,7 @@
 																<table cellpadding="0" cellspacing="0" border="0" align="left">
 																	<tbody>
 																		<tr>
-																			<td width="90" height="30" align="center" valign="middle" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="17" style=" width:90px; padding:0px; margin:0px; color:#d40b22; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#d40b22; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">More</a></td>
+																			<td width="90" height="30" align="center" valign="middle" style=" width:90px; padding:0px; margin:0px; color:#f77243; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#f0b238; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" style="text-decoration:none; color:#ffffff; font-size:12px;">Leia mais</a></td>
 																		</tr>
 																	</tbody>
 																</table>
@@ -211,7 +182,7 @@
 																<table cellpadding="0" cellspacing="0" border="0" align="left">
 																	<tbody>
 																		<tr>
-																			<td width="90" height="30" align="center" valign="middle" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="17" style=" width:90px; padding:0px; margin:0px; color:#d40b22; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#d40b22; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">More</a></td>
+																			<td width="90" height="30" align="center" valign="middle" style=" width:90px; padding:0px; margin:0px; color:#f77243; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#f0b238; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																		</tr>
 																	</tbody>
 																</table>
@@ -242,7 +213,7 @@
 																<table cellpadding="0" cellspacing="0" border="0" align="left">
 																	<tbody>
 																		<tr>
-																			<td width="90" height="30" align="center" valign="middle" data-bgcolor="View work button" data-size="View work button" data-min="10" data-max="17" style=" width:90px; padding:0px; margin:0px; color:#d40b22; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#d40b22; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" data-color="View work button" style="text-decoration:none; color:#ffffff;">More</a></td>
+																			<td width="90" height="30" align="center" valign="middle" style=" width:90px; padding:0px; margin:0px; color:#f77243; font-size:14px; font-family: 'Raleway', sans-serif; font-weight:400; text-transform:uppercase; background-color:#f0b238; border-radius: 50px; line-height:28px;"><a href="http://www.yourwebsiteurl.com" style="text-decoration:none; color:#ffffff;">Leia mais</a></td>
 																		</tr>
 																	</tbody>
 																</table>
@@ -298,19 +269,19 @@
 																								<td width="100%" height="25" valign="top" align="left" data-size="Meet Name" data-color="Meet Name" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:700; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:14px;">CEOL MEETINGS</td>
 																							</tr>
 																							<tr>
-																								<td width="100%" valign="top" height="28" align="left" data-size="Post Title" data-color="Post Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#d40b22; font-size:13px; font-weight:400; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:13px;">abril 2018</td>
+																								<td width="100%" valign="top" height="28" align="left" data-size="Post Title" data-color="Post Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#f77243; font-size:13px; font-weight:400; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:13px;">abril 2018</td>
 																							</tr>
 																							<tr>
 																								<td width="100%" height="145" valign="middle" align="left" data-size="Description" data-color="Description" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px;">Lorem ipsum quis massa id velit sagittis fermentum massa. Pellen tesque vel massa a felis. Lorem ipsum quis massa id velit sagittis fermentum massa. </td>
 																							</tr>
 																							<tr>
-																								<td text-center" height="38" valign="bottom" align="left" style="line-height:1px;">
+																								<td height="38" valign="bottom" align="left" style="line-height:1px;">
 																									<table  cellpadding="0" cellspacing="0" border="0" align="left" style="border-collapse:collapse">
 																										<tbody>
 																											<tr>
 																												<td width="33" height="25" align="left" valign="middle" style="line-height:1px;"><a target="_blank" href="https://twitter.com/" style="text-decoration:none;"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/meet-twitter-red.png" border="0" width="25" height="25" alt="twitter" title="twitter" style="display:block;"></a></td>
 																												<td width="33" height="25" align="left" valign="middle" style="line-height:1px;"><a target="_blank" href="https://www.facebook.com/" style="text-decoration:none;"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/meet-facebook-red.png" border="0" width="25" height="25" alt="facebook" title="facebook" style="display:block;"></a></td>
-																												<td width="33" height="25" align="left" valign="middle" style="line-height:1px;"><a target="_blank" href="https://in.pinterest.com/login/" style="text-decoration:none;"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/meet-pinterest-red.png" border="0" width="25" height="25" alt="pinterest" title="pinterest" style="display:block;"></a></td>
+
 																											</tr>
 																										</tbody>
 																									</table>
