--- a/CEOL2.html
+++ b/CEOL2.html
@@ -4,6 +4,19 @@
 			<td width="100%" height="16">
 			</td>
 		</tr>
+        <tr>
+            <td width="100%" align="center" valign="middle">
+				<table  cellpadding="0" cellspacing="0" border="0" width="600" height="56" style="border-collapse:collapse">
+					<tbody>
+						<tr>
+                            aqui
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+
+        </tr>
 		<tr>
 			<td width="100%" align="center" valign="middle">
 				<table  cellpadding="0" cellspacing="0" border="0" width="600" height="56" style="border-collapse:collapse">
